# binary_enclave

./: Cargo.toml  LICENSE.md  README.md
examples/: README.md  botpack.json  botpack.rs  simple-serde.rs  simple.json
examples/botpack/: Cargo.toml  example.json
examples/botpack/src/: cmd.rs  config.rs  main.rs
macro/: Cargo.toml
macro/src/: lib.rs
src/: error.rs  lib.rs  result.rs
