[package]
name = "binary_enclave"
version = "0.1.1"
authors = ["Zachery Hostens <zacheryph@gmail.com>"]
edition = "2018"
categories = ["config"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/zacheryph/binary_enclave"
repository = "https://github.com/zacheryph/binary_enclave"
documentation = "https://docs.rs/binary_enclave"
description = "embed modifiable configuration or other data within a binary directly"

exclude = [".gitignore", "examples/"]

[dependencies]
bincode = "^1.3"
binary_enclave_macro = { version = "=0.1.1", path = "macro" }
goblin = "^0.3"
serde = "^1.0"
thiserror = "^1.0"

[dev-dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
