[package]
name = "binary_enclave_macro"
version = "0.1.1"
authors = ["Zachery Hostens <zacheryph@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/zacheryph/binary_enclave"
repository = "https://github.com/zacheryph/binary_enclave"
description = "macro crate for binary_enclave"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1.0"
quote = "^1.0"
syn = { version = "^1.0", features = ["full"] }
