[package]
name = "botpack"
version = "0.1.0"
authors = ["Zachery Hostens <zacheryph@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary_enclave = { path = "../.." }
gumdrop = "0.8.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
